# plsqlunwrap

./: .gitignore  LICENSE  README.md  pyproject.toml
plsqlunwrap/: __init__.py  __main__.py  unwrap.py
test/: test_unwrap.py
test/samples/: 01.plb  01.sql  02.plb  02.sql  03.plb  04.plb  04.sql  APEX.plb  APEX.sql  APEX_ADMIN.plb  APEX_ADMIN.sql  DEVELOPMENT_SERVICE_HOME.plb  DEVELOPMENT_SERVICE_HOME.sql  DEVELOPMENT_SERVICE_HOME_LOGIN.sql  DEVELOPMENT_SERVICE_SIGNUP.plb  DEVELOPMENT_SERVICE_SIGNUP.sql  HTMLDB.plb  HTMLDB.sql  HTMLDB_ADMIN.plb  HTMLDB_ADMIN.sql  HTMLDB_LOGIN.plb  HTMLDB_LOGIN.sql  P.plb  P.sql  WS.plb  WS.sql  WWV_FLOW_INIT_HTP_BUFFER.plb  WWV_FLOW_INIT_HTP_BUFFER.sql  Z.plb  Z.sql
